# aax-utils

./: CMakeLists.txt  ChangeLog  description
CMakeModules/: CPack_Defaults.cmake  FindAAX.cmake  FindEBUR128.cmake  FindXML.cmake
base/: CMakeLists.txt  memory.c  memory.h  random.c  timer.c  types.h
include/: cmake_config.h.in
midi/: CMakeLists.txt  GM2inst.c  GSinst.c  XG2aaxs.c  XGinst.c  driver.cpp  driver.hpp  file.cpp  file.hpp  gmmidi.cpp  gsmidi.cpp  instrument.cpp  instrument.hpp  midi.cpp  midi.hpp  shared.hpp  stream.cpp  stream.hpp  xgmidi.cpp
sounds/: browniannoise.aaxs  constant.aaxs  dynamic-timbre.aaxs  empty-sound.aaxs  ex1.mid  file.aaxs  flanger_frequency.aaxs  flute-pan-body.aaxs  flute-pan-emitter.aaxs  flute-pan-resonator.aaxs  flute-pan.aaxs  lead-reverse.aaxs  piano-reverse.aaxs  pinknoise.aaxs  pulse-sine.aaxs  sine-440Hz-lowfi.aaxs  sine-440Hz-pitch-envelope.aaxs  sine-440Hz.aaxs  sound_logo.aaxs  test-chorus-cycloid.aaxs  test-chorus-highdelay.aaxs  test-chorus-pure-cycloid.aaxs  test-chorus-pure-sine.aaxs  test-chorus-pure-triangle.aaxs  test-chorus-sawtooth-pure.aaxs  test-chorus-sawtooth.aaxs  test-chorus-sine.aaxs  test-chorus-square-pure.aaxs  test-chorus-square.aaxs  test-chorus-triangle.aaxs  test-chorus.aaxs  test-cycloid.aaxs  test-delay-bitcrush.aaxs  test-delay-stereo.aaxs  test-delay.aaxs  test-distortion-asymmetric-hard.aaxs  test-distortion-asymmetric-soft.aaxs  test-distortion-symmetric-soft.aaxs  test-distortion.aaxs  test-envelope.aaxs  (+51 more)
src/: CMakeLists.txt  aaxcvt.c  aaxinfo.c  aaxplay.c  aaxplaymidi.cpp  aaxsstandardize.c  drawbar2aaxs.c  driver.c  driver.h  playlist.c  playlist.h
test/: CMakeLists.txt  indoor-map.aaxs  test_layered_reverb.c  testbitcrusher.c  testcone.c  testdelay.c  testdistance.c  testdistance_frame.c  testdistortion.c  testdistortion_frame.c  testenvelope.c  testformats.c  testloop.c  testlowpass.c  testmono3d.c  testmono3d_convolution.c  testmono3d_oneshot.c  testmono3d_reverb.c  testmultiplay.c  testnoise_ema_frequencyfilter.c  testnoise_equalizer.c  testnoise_frequencyfilter.c  testnoise_grapicequalizer.c  testphasing.c  testphasing_frame.c  testphasing_mixer.c  testplay.c  testplay_mixer_256+.c  testplay_multi.c  testplay_simple.c  testplaymidi.c  teststereo.c  teststereo_convolution.c  teststereo_equalizer.c  teststereo_frame_feedback.c  teststereo_frame_reverb.c  teststereo_grapheq.c  teststereo_reverb.c  testthunder.c  testwaves.c
test++/: CMakeLists.txt  aaxinfo++.cpp  aaxplay++.cpp  testdistortion_frame++.cpp  testensemble++.cpp  testensemble.cpp  testinit++.cpp  testinstrument++.cpp  testmath++.cpp  testmono3d++.cpp  testmono3d_frame_reverb++.cpp  testmono3d_reverb++.cpp  testmusicstream++.cpp  testplay++.cpp  teststream++.cpp  testtying++.cpp
