
set( MIDI_OBJS
     driver.cpp
     file.cpp
     instrument.cpp
     stream.cpp
     gsmidi.cpp
     xgmidi.cpp
   )

set(LIBTYPE STATIC)

set(LIBMIDI midi)
ADD_LIBRARY(${LIBMIDI} ${LIBTYPE} ${MIDI_OBJS})

FUNCTION(CREATE_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_NAME}.c)
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${LIBDRIVER} ${LIBBASE} ${AAX_LIBRARY} ${EXTRA_LIBS})
    SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES
            COMPILE_DEFINITIONS  "SRC_PATH=\"${PROJECT_SOURCE_DIR}/sounds\"")
ENDFUNCTION()

CREATE_TEST(GS2aaxs)
CREATE_TEST(XG2aaxs)
